implements main and buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@
     <!-- main -->
     <main>
         <div class="container">
-            
+            <section class="buttonscontainer">
+                <button class="button" id="button1">Add Task</button>
+                <button class="button" id="button2">Add Section</button>
+            </section>
+
+            <section>
+                <ul>
+                    <li>
+                        
+                    </li>
+                </ul>
+            </section>
         </div>
     </main>
 </body>
