implements checklist and tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>html-css-toboolist</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <body>
     <!-- header -->
@@ -24,7 +26,24 @@
             <section>
                 <ul>
                     <li>
-                        
+                        <span>
+                            <h2>New Task</h2>
+                        </span>
+                        <input type="checkbox" id="check" checked="check">
+                        <label for="check">Quarterly Newsletter</label>
+                        <span class="tag" id="blue">Editorial</span>
+                    </li>
+
+                    <li>
+                        <span>
+                            <h2>Today</h2>
+                        </span>
+                    </li>
+
+                    <li>
+                        <span>
+                            <h2>Upcoming</h2>
+                        </span>
                     </li>
                 </ul>
             </section>
